Campaign page splash: Fix issue where circle text spills over on largest screen widths

--- a/src/style/CampaignPage.less
+++ b/src/style/CampaignPage.less
@@ -446,6 +446,7 @@
 				justify-content: center;
 				align-items: center;
 				margin: 0 auto;
+
 				// mobile: stack vertically
 				@media @width-mobile {
 					padding: 1rem 0;
@@ -479,19 +480,11 @@
 						font-size: 1rem;
 					}
 
-					@media (min-width: 2100px) {
-						font-size: 2rem;
-					}
-
 					.num {
 						font-size: 1.2rem;
 
 						@media @width-mobile {
 							font-size: 1rem;
-						}
-
-						@media (min-width: 2100px) {
-							font-size: 2rem;
 						}
 					}
 				}
